# bami-service-template

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: Dockerfile  pyproject.toml
{{cookiecutter.repo_name}}/deploy/kustomize/services/{{cookiecutter.service_name}}/base/: deployment.yaml
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: main.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/authz/: policy.csv  provider.py
