[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.repo_name}}"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "bami-chassis{{cookiecutter.chassis_version}}"
]

[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.package_name}}"]
